# libnumakit

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  TODO.md
.github/workflows/: build.yml  ci.yml  debug_arm64.yml  test_numa.yml
docs/: Doxyfile.in  TESTING.md
docs/design/: architecture.md  locking_protocol.md  memory_layout.md  topology_mapping.md
examples/: 01_hello_numa.c  02_arena_alloc.c  03_topology_query.c  CMakeLists.txt
include/numakit/: memory.h  numakit.h  sched.h  sync.h  topology.h
include/numakit/structs/: deque.h  hash_table.h  ring_buffer.h  skip_list.h
scripts/: build_uml.sh  run_uml.sh  uml_guest_runner.sh
src/: CMakeLists.txt  init.c  internal.h
src/memory/: arena.c  hugepage_ops.c  migrate.c  pool.c  slab.c
src/sched/: affinity.c  auto_balancer.c  balancer.c  messaging.c  task_pool.c
src/structs/: deque.c  hash_table.c  ring_buffer.c  skip_list.c
src/sync/: mcs_lock.c  pcounter.c  rws_lock.c  ticket_lock.c
src/topology/: hwloc_backend.c  query.c
tests/: CMakeLists.txt
tests/benchmarks/: 00_throughput.c  01_latency.c  02_memory_bandwidth.c  03_contention.c  04_rw_scaling.c  benchmarks.h  main.c
tests/hwloc/: 00_hello_hwloc.c
tests/integration/: 00_topology_check.c  01_pinning_check.c  02_cross_node_messaging.c  03_pool_routing.c  04_page_migration.c  integration.h  main.c
tests/qemu/: run_numa_test.sh
tests/unit/: 00_sanity_check.c  01_affinity.c  02_task_pool.c  03_memory_migrate.c  04_ticket_lock.c  05_pcounter.c  06_hash_table.c  07_slab_allocator.c  08_auto_balancer.c  09_hugepage_coalesce.c  10_topology_query.c  11_deque_test.c  12_skip_list.c  13_mempool_test.c  14_mcs_lock.c  15_rws_lock.c  16_ring_buffer.c  17_messaging.c  18_balancer.c  main.c  unit.h
